# Custom-AST-Calculator

./: .gitignore  CMakeLists.txt  README.md
include/: evaluator.h  lexer.h  parser.h
src/: evaluator.cpp  lexer.cpp  main.cpp  parser.cpp
